--- a/vaadin/pom.xml
+++ b/vaadin/pom.xml
@@ -12,6 +12,7 @@
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
