deactive license plugin

--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,13 @@
-<!--
-
-    Copyright © 2019 Daniel Nordhoff-Vergien (dve@vergien.net)
-
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-
-        http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
-
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<!-- Copyright © 2019 Daniel Nordhoff-Vergien (dve@vergien.net) Licensed 
+	under the Apache License, Version 2.0 (the "License"); you may not use this 
+	file except in compliance with the License. You may obtain a copy of the 
+	License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by 
+	applicable law or agreed to in writing, software distributed under the License 
+	is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY 
+	KIND, either express or implied. See the License for the specific language 
+	governing permissions and limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -62,45 +54,16 @@
 				<version>1.4-SNAPSHOT</version> </dependency> -->
 		</dependencies>
 	</dependencyManagement>
-	<profiles>
-		<profile>
-			<id>lic</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.mycila</groupId>
-						<artifactId>license-maven-plugin</artifactId>
-						<configuration>
-							<header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
-							<properties>
-								<owner>Daniel Nordhoff-Vergien</owner>
-								<email>dve@vergien.net</email>
-							</properties>
-							<excludes>
-								<exclude>**/*.iml</exclude>
-								<exclude>**/README*</exclude>
-								<exclude>**/jacoco.exec*</exclude>
-								<exclude>**/LICENSE.txt</exclude>
-								<exclude>**/_data/webdrivers/*</exclude>
-								<!--<exclude>src/test/resources/**</exclude> -->
-								<!--<exclude>src/main/resources/**</exclude> -->
-								<exclude>target/**</exclude>
-							</excludes>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
 
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
