--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,7 @@
 	is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY 
 	KIND, either express or implied. See the License for the specific language 
 	governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.rapidpm</groupId>
@@ -17,7 +15,7 @@
 	</parent>
 	<groupId>net.vergien.lets-generate</groupId>
 	<artifactId>lets-generate-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>pom</packaging>
 	<name>Lets Generate :: Parent</name>
 	<inceptionYear>2019</inceptionYear>
@@ -136,4 +134,8 @@
 			</distributionManagement>
 		</profile>
 	</profiles>
+
+  <scm>
+    <tag>lets-generate-parent-0.0.1</tag>
+  </scm>
 </project>
