--- a/test/pom.xml
+++ b/test/pom.xml
@@ -15,13 +15,12 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>net.vergien.lets-generate</groupId>
 		<artifactId>lets-generate-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>lets-generate-test</artifactId>
 
@@ -29,12 +28,12 @@
 		<dependency>
 			<groupId>net.vergien.lets-generate</groupId>
 			<artifactId>lets-generate-annotations</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.1</version>
 		</dependency>		
 		<dependency>
 			<groupId>net.vergien.lets-generate</groupId>
 			<artifactId>lets-generate-vaadin</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.vergien.bau</groupId>
