--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -67,6 +67,14 @@
 			<artifactId>lets-generate-vaadin</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+		</dependency>
 		<!--Vaadin -->
 		<dependency>
 			<groupId>com.vaadin</groupId>
