--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -1,21 +1,13 @@
-<!--
-
-    Copyright © 2019 Daniel Nordhoff-Vergien (dve@vergien.net)
-
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-
-        http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
-
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<!-- Copyright © 2019 Daniel Nordhoff-Vergien (dve@vergien.net) Licensed 
+	under the Apache License, Version 2.0 (the "License"); you may not use this 
+	file except in compliance with the License. You may obtain a copy of the 
+	License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by 
+	applicable law or agreed to in writing, software distributed under the License 
+	is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY 
+	KIND, either express or implied. See the License for the specific language 
+	governing permissions and limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -35,18 +27,10 @@
 		<dependency>
 			<groupId>net.vergien.bau</groupId>
 			<artifactId>bean-auto-utils-annotations</artifactId>
-			<version>${bean-auto-utils.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>javapoet</artifactId>
-			<version>1.11.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.jolira</groupId>
-			<artifactId>hickory</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -55,7 +39,6 @@
 		<dependency>
 			<groupId>org.infinitenature</groupId>
 			<artifactId>commons-pagination</artifactId>
-			<version>0.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>net.vergien.lets-generate</groupId>
@@ -74,6 +57,21 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct.tools.gem</groupId>
+			<artifactId>gem-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.testing.compile</groupId>
+			<artifactId>compile-testing</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.vergien.bau</groupId>
+			<artifactId>bean-auto-utils-processor</artifactId>
+			<version>${bean-auto-utils.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<!--Vaadin -->
 		<dependency>
@@ -98,9 +96,9 @@
 							<version>${bean-auto-utils.version}</version>
 						</annotationProcessorPath>
 						<annotationProcessorPath>
-							<groupId>com.jolira</groupId>
-							<artifactId>hickory</artifactId>
-							<version>1.0.0</version>
+							<groupId>org.mapstruct.tools.gem</groupId>
+							<artifactId>gem-processor</artifactId>
+							<version>${tools.gem.version}</version>
 						</annotationProcessorPath>
 					</annotationProcessorPaths>
 				</configuration>
